--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,4 +69,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation project(path: ':google_mobile_ads')
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
